<resources>
    <string name="app_name">Pounce App</string>
    <string name="hintFirstName">Enter your first name here</string>
    <string name="hintLastName">Enter your last name here</string>
    <string name="hintMobileNumber">Enter your mobile number here</string>
    <string name="hintEmailAddress">Enter your email address here</string>
    <string name="buttonSubmit">Submit</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="hintPassword">Password</string>
    <string name="forgotPasswordText">Forgot Password?</string>
    <string name="submitButtonText">Submit</string>
    <string name="hostButtonText">Host</string>
    <string name="joinButtonText">Join</string>
    <string name="errorMessage">An error has occurred, please try again</string>
    <string name="errorTitle">Error</string>
    <string name="OkButton">Ok</string>
</resources>
