<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/profilePicture"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="16dp"
        android:src="@mipmap/default_profile_pic" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:hint="@string/hintFirstName"
                app:errorEnabled="true"
                android:id="@+id/textInputFirstName">
                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textFirstName"
                    android:layout_margin="16dp"
                    android:layout_weight="1"
                    android:inputType="textCapWords"
                    android:maxLength="32"
                    android:textAlignment="center"
                    android:textSize="20sp"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLastName"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:hint="@string/hintLastName"
                app:errorEnabled="true"
                android:layout_weight="1">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/textLastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:layout_weight="1"
                    android:inputType="textCapWords"
                    android:maxLength="32"
                    android:textAlignment="center"
                    android:textSize="20sp" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputMobileNumber"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:hint="@string/hintMobileNumber"
                app:errorEnabled="true"
                android:layout_weight="1">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/textMobileNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:layout_weight="1"
                    android:inputType="number"
                    android:maxLength="10"
                    android:textAlignment="center"
                    android:textSize="20sp" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:hint="@string/hintEmailAddress"
                app:errorEnabled="true"
                android:layout_weight="1">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/textEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:layout_weight="1"
                    android:inputType="textEmailAddress"
                    android:textAlignment="center"
                    android:textSize="20sp" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputPassword"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:hint="@string/hintPassword"
                app:errorEnabled="true"
                android:layout_weight="1">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:layout_weight="1"
                    android:inputType="textPassword"
                    android:textAlignment="center"
                    android:textSize="20sp" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/buttonSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="8dp"
        android:text="@string/buttonSubmit" />
</LinearLayout>